--- a/style.css
+++ b/style.css
@@ -16,10 +16,7 @@ input{
 	display: none;
 }
 #fore{
-	-webkit-transition: -webkit-transform .5s ease-in-out;
-	transition: -webkit-transform .5s ease-in-out;
 	transition: transform .5s ease-in-out;
-	transition: transform .5s ease-in-out, -webkit-transform .5s ease-in-out;
 	text-align: center;
 }
 .title{
@@ -30,12 +27,8 @@ input{
 	font-size: 10vmin;
 	text-shadow: 0 0 1vmin black;
 	text-align: center;
-	-webkit-transform: translate3d(0, -100vh, 0);
-	        transform: translate3d(0, -100vh, 0);
-	-webkit-transition: -webkit-transform .5s ease-out;
-	transition: -webkit-transform .5s ease-out;
+	transform: translate3d(0, -100vh, 0);
 	transition: transform .5s ease-out;
-	transition: transform .5s ease-out, -webkit-transform .5s ease-out;
 /* 	animation: slidetop 0.5s ease-out forwards; */
 }
 /* @keyframes slidetop{
@@ -57,12 +50,8 @@ input{
 	font-size: 7vmin;
 	text-align: center;
 	text-shadow: 0 0 1vmin black;
-	-webkit-transform: translate3d(-100vw, 0, 0);
-	        transform: translate3d(-100vw, 0, 0);
-	-webkit-transition: -webkit-transform .5s ease-out;
-	transition: -webkit-transform .5s ease-out;
+	transform: translate3d(-100vw, 0, 0);
 	transition: transform .5s ease-out;
-	transition: transform .5s ease-out, -webkit-transform .5s ease-out;
 /* 	animation: slideleft 1s -0.5s ease-out forwards; */
 }
 #name{
@@ -80,16 +69,6 @@ input{
 	padding: 0;
 	width: 80vw;
 	height: 5vmin;
-	background: -webkit-gradient(linear,
-		left top, right top,
-		from(hsl(0, 100%, 50%)),
-		color-stop(hsl(60, 100%, 50%)),
-		color-stop(hsl(120, 100%, 50%)),
-		color-stop(hsl(180, 100%, 50%)),
-		color-stop(hsl(240, 100%, 50%)),
-		color-stop(hsl(300, 100%, 50%)),
-		to(hsl(360, 100%, 50%))
-	);
 	background: linear-gradient(90deg,
 		hsl(0, 100%, 50%),
 		hsl(60, 100%, 50%),
@@ -111,19 +90,13 @@ input{
 	height: 7vmin;
 	border: 1vmin solid white;
 	border-radius: 4.5vmin;
-	-webkit-transform: translate(-4.5vmin, -2vmin);
-	        transform: translate(-4.5vmin, -2vmin);
+	transform: translate(-4.5vmin, -2vmin);
 	cursor: pointer;
-	-webkit-box-shadow: 0 0 1vmin black;
-	        box-shadow: 0 0 1vmin black;
-	-webkit-transition: -webkit-transform .2s;
-	transition: -webkit-transform .2s;
+	box-shadow: 0 0 1vmin black;
 	transition: transform .2s;
-	transition: transform .2s, -webkit-transform .2s;
 }
 #slider:hover{
-	-webkit-transform: translate(-4.5vmin, -2vmin) scale(1.2);
-	        transform: translate(-4.5vmin, -2vmin) scale(1.2);
+	transform: translate(-4.5vmin, -2vmin) scale(1.2);
 }
 #start{
 /* 	animation: slideleft 1s -0.25s forwards; */
@@ -133,19 +106,13 @@ input{
 	border: 1vmin solid white;
 	padding: 2vmin;
 	cursor: pointer;
-	-webkit-transition: -webkit-transform .2s, -webkit-box-shadow .2s;
-	transition: -webkit-transform .2s, -webkit-box-shadow .2s;
 	transition: transform .2s, box-shadow .2s;
-	transition: transform .2s, box-shadow .2s, -webkit-transform .2s, -webkit-box-shadow .2s;
 	text-shadow: none;
-	-webkit-box-shadow: 0 2vmin 3vmin rgba(0, 0, 0, 0.5);
-	        box-shadow: 0 2vmin 3vmin rgba(0, 0, 0, 0.5);
+	box-shadow: 0 2vmin 3vmin rgba(0, 0, 0, 0.5);
 }
 #start:hover{
-	-webkit-transform: scale(0.9);
-	        transform: scale(0.9);
-	-webkit-box-shadow: 0 0.5vmin 1vmin rgba(0, 0, 0, 0.5);
-	        box-shadow: 0 0.5vmin 1vmin rgba(0, 0, 0, 0.5);
+	transform: scale(0.9);
+	box-shadow: 0 0.5vmin 1vmin rgba(0, 0, 0, 0.5);
 }
 .button{
 	border: 1vmin solid white;
@@ -158,38 +125,24 @@ input{
 	text-shadow: none;
 	line-height: 10vmin;
 	cursor: pointer;
-	-webkit-box-shadow: 0 2vmin 3vmin rgba(0, 0, 0, 0.5);
-	        box-shadow: 0 2vmin 3vmin rgba(0, 0, 0, 0.5);
-	-webkit-transition: -webkit-transform .2s, -webkit-box-shadow .2s;
-	transition: -webkit-transform .2s, -webkit-box-shadow .2s;
+	box-shadow: 0 2vmin 3vmin rgba(0, 0, 0, 0.5);
 	transition: transform .2s, box-shadow .2s;
-	transition: transform .2s, box-shadow .2s, -webkit-transform .2s, -webkit-box-shadow .2s;
 }
 .button:hover{
-	-webkit-transform: scale(0.9) !important;
-	        transform: scale(0.9) !important;
-	-webkit-box-shadow: 0 0.5vmin 1vmin rgba(0, 0, 0, 0.5);
-	        box-shadow: 0 0.5vmin 1vmin rgba(0, 0, 0, 0.5);
+	transform: scale(0.9) !important;
+	box-shadow: 0 0.5vmin 1vmin rgba(0, 0, 0, 0.5);
 }
 #host{
 	top: calc(30vh - 8vmin);
-	-webkit-transform: translate3d(-100vw, 0, 0);
-	        transform: translate3d(-100vw, 0, 0);
-	-webkit-transition: -webkit-transform .5s ease-out, -webkit-box-shadow .2s;
-	transition: -webkit-transform .5s ease-out, -webkit-box-shadow .2s;
+	transform: translate3d(-100vw, 0, 0);
 	transition: transform .5s ease-out, box-shadow .2s;
-	transition: transform .5s ease-out, box-shadow .2s, -webkit-transform .5s ease-out, -webkit-box-shadow .2s;
 /* 	-webkit-transform-style: preserve-3d; */
 /* 	animation: slideleft 1s -0.5s ease-out forwards; */
 }
 #join{
 	top: calc(70vh - 8vmin);
-	-webkit-transform: translate3d(-100vw, 0, 0);
-	        transform: translate3d(-100vw, 0, 0);
-	-webkit-transition: -webkit-transform .5s ease-out, -webkit-box-shadow .2s;
-	transition: -webkit-transform .5s ease-out, -webkit-box-shadow .2s;
+	transform: translate3d(-100vw, 0, 0);
 	transition: transform .5s ease-out, box-shadow .2s;
-	transition: transform .5s ease-out, box-shadow .2s, -webkit-transform .5s ease-out, -webkit-box-shadow .2s;
 /* 	-webkit-transform-style: preserve-3d; */
 /* 	animation: slideleft 1s ease-out forwards; */
 }
@@ -232,19 +185,13 @@ input{
 	cursor: pointer;
 	font-size: 10vmin;
 	padding: 2vmin;
-	-webkit-transition: -webkit-box-shadow .2s, -webkit-transform .2s;
-	transition: -webkit-box-shadow .2s, -webkit-transform .2s;
 	transition: box-shadow .2s, transform .2s;
-	transition: box-shadow .2s, transform .2s, -webkit-box-shadow .2s, -webkit-transform .2s;
-	-webkit-box-shadow: 0 2vmin 3vmin rgba(0, 0, 0, 0.5);
-	        box-shadow: 0 2vmin 3vmin rgba(0, 0, 0, 0.5);
+	box-shadow: 0 2vmin 3vmin rgba(0, 0, 0, 0.5);
 	z-index: 100000;
 }
 #startgame:hover{
-	-webkit-box-shadow: 0 0.5vmin 1vmin rgba(0, 0, 0, 0.5);
-	        box-shadow: 0 0.5vmin 1vmin rgba(0, 0, 0, 0.5);
-	-webkit-transform: scale(0.9);
-	        transform: scale(0.9);
+	box-shadow: 0 0.5vmin 1vmin rgba(0, 0, 0, 0.5);
+	transform: scale(0.9);
 }
 .label{
 	font-family: "Press Start 2P";
@@ -254,8 +201,7 @@ input{
 	padding: 2vmin;
 	position: absolute;
 	font-size: 3vmin;
-	-webkit-transform: translateX(-50%) translateY(-100%);
-	        transform: translateX(-50%) translateY(-100%);
+	transform: translateX(-50%) translateY(-100%);
 	text-align: center;
 	line-height: 4vmin;
 	z-index: 0;
@@ -270,4 +216,13 @@ input{
 	color: white;
 	text-shadow: 0 0 2vmin white;
 	z-index: 100000;
+}
+#lap{
+	font-size: 10vmin;
+	position: absolute;
+	color: white;
+	text-shadow: 0 0 2vmin white;
+	z-index: 100000;
+	top: 0;
+	left: 3vmin;
 }
