--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+#version{
+	position: absolute;
+	top: 20px;
+	left: 20px;
+	font-size: 1vmin;
+}
 html{
 	margin: 0;
 	padding: 0;
@@ -6,7 +12,6 @@ html{
 body{
 	margin: 0;
 	padding: 0;
-	background-color: white;
 	height: 100vh;
 }
 input{
