--- a/style.css
+++ b/style.css
@@ -21,7 +21,6 @@ input{
 	display: none;
 }
 #fore{
-	-webkit-transition: -webkit-transform .5s ease-in-out;
 	transition: -webkit-transform .5s ease-in-out;
 	transition: transform .5s ease-in-out;
 	transition: transform .5s ease-in-out, -webkit-transform .5s ease-in-out;
@@ -38,7 +37,6 @@ input{
 	text-align: center;
 	-webkit-transform: translate3d(0, -100vh, 0);
 	        transform: translate3d(0, -100vh, 0);
-	-webkit-transition: -webkit-transform .5s ease-out;
 	transition: -webkit-transform .5s ease-out;
 	transition: transform .5s ease-out;
 	transition: transform .5s ease-out, -webkit-transform .5s ease-out;
@@ -65,7 +63,6 @@ input{
 	text-shadow: 0 0 1vmin black;
 	-webkit-transform: translate3d(-100vw, 0, 0);
 	        transform: translate3d(-100vw, 0, 0);
-	-webkit-transition: -webkit-transform .5s ease-out;
 	transition: -webkit-transform .5s ease-out;
 	transition: transform .5s ease-out;
 	transition: transform .5s ease-out, -webkit-transform .5s ease-out;
@@ -86,16 +83,6 @@ input{
 	padding: 0;
 	width: 80vw;
 	height: 5vmin;
-	background: -webkit-gradient(linear,
-		left top, right top,
-		from(hsl(0, 100%, 50%)),
-		color-stop(hsl(60, 100%, 50%)),
-		color-stop(hsl(120, 100%, 50%)),
-		color-stop(hsl(180, 100%, 50%)),
-		color-stop(hsl(240, 100%, 50%)),
-		color-stop(hsl(300, 100%, 50%)),
-		to(hsl(360, 100%, 50%))
-	);
 	background: linear-gradient(90deg,
 		hsl(0, 100%, 50%),
 		hsl(60, 100%, 50%),
@@ -120,9 +107,7 @@ input{
 	-webkit-transform: translate(-4.5vmin, -2vmin);
 	        transform: translate(-4.5vmin, -2vmin);
 	cursor: pointer;
-	-webkit-box-shadow: 0 0 1vmin black;
-	        box-shadow: 0 0 1vmin black;
-	-webkit-transition: -webkit-transform .2s;
+	box-shadow: 0 0 1vmin black;
 	transition: -webkit-transform .2s;
 	transition: transform .2s;
 	transition: transform .2s, -webkit-transform .2s;
@@ -130,6 +115,41 @@ input{
 #slider:hover{
 	-webkit-transform: translate(-4.5vmin, -2vmin) scale(1.2);
 	        transform: translate(-4.5vmin, -2vmin) scale(1.2);
+}
+#cardboard::after{
+	content: "";
+	background-image: url("https://jchabin.github.io/cars/cardboard.png");
+	background-size: cover;
+	height: 10vmin;
+	width: 10vmin;
+	position: absolute;
+	bottom: 5vmin;
+	left: 5vmin;
+	-webkit-filter: brightness(2);
+	        filter: brightness(2);
+}
+#cardboard.sel{
+	background-color: #62db68;
+}
+#cardboard{
+	height: 20vmin;
+	width: 20vmin;
+	background-color: #db6262;
+	position: absolute;
+	bottom: 2vmin;
+	right: 2vmin;
+	opacity: 1;
+	border-radius: 10vmin;
+	cursor: pointer;
+	box-shadow: 0 2vmin 3vmin rgba(0, 0, 0, 0.5);
+	transition: box-shadow .2s, background .2s, -webkit-transform .2s;
+	transition: transform .2s, box-shadow .2s, background .2s;
+	transition: transform .2s, box-shadow .2s, background .2s, -webkit-transform .2s;
+}
+#cardboard:hover{
+	-webkit-transform: scale(0.9);
+	        transform: scale(0.9);
+	box-shadow: 0 0.5vmin 1vmin rgba(0, 0, 0, 0.5);
 }
 #start{
 /* 	animation: slideleft 1s -0.25s forwards; */
@@ -139,19 +159,16 @@ input{
 	border: 1vmin solid white;
 	padding: 2vmin;
 	cursor: pointer;
-	-webkit-transition: -webkit-transform .2s, -webkit-box-shadow .2s;
-	transition: -webkit-transform .2s, -webkit-box-shadow .2s;
+	transition: box-shadow .2s, -webkit-transform .2s;
 	transition: transform .2s, box-shadow .2s;
-	transition: transform .2s, box-shadow .2s, -webkit-transform .2s, -webkit-box-shadow .2s;
+	transition: transform .2s, box-shadow .2s, -webkit-transform .2s;
 	text-shadow: none;
-	-webkit-box-shadow: 0 2vmin 3vmin rgba(0, 0, 0, 0.5);
-	        box-shadow: 0 2vmin 3vmin rgba(0, 0, 0, 0.5);
+	box-shadow: 0 2vmin 3vmin rgba(0, 0, 0, 0.5);
 }
 #start:hover{
 	-webkit-transform: scale(0.9);
 	        transform: scale(0.9);
-	-webkit-box-shadow: 0 0.5vmin 1vmin rgba(0, 0, 0, 0.5);
-	        box-shadow: 0 0.5vmin 1vmin rgba(0, 0, 0, 0.5);
+	box-shadow: 0 0.5vmin 1vmin rgba(0, 0, 0, 0.5);
 }
 .button{
 	border: 1vmin solid white;
@@ -164,27 +181,23 @@ input{
 	text-shadow: none;
 	line-height: 10vmin;
 	cursor: pointer;
-	-webkit-box-shadow: 0 2vmin 3vmin rgba(0, 0, 0, 0.5);
-	        box-shadow: 0 2vmin 3vmin rgba(0, 0, 0, 0.5);
-	-webkit-transition: -webkit-transform .2s, -webkit-box-shadow .2s;
-	transition: -webkit-transform .2s, -webkit-box-shadow .2s;
+	box-shadow: 0 2vmin 3vmin rgba(0, 0, 0, 0.5);
+	transition: box-shadow .2s, -webkit-transform .2s;
 	transition: transform .2s, box-shadow .2s;
-	transition: transform .2s, box-shadow .2s, -webkit-transform .2s, -webkit-box-shadow .2s;
+	transition: transform .2s, box-shadow .2s, -webkit-transform .2s;
 }
 .button:hover{
 	-webkit-transform: scale(0.9) !important;
 	        transform: scale(0.9) !important;
-	-webkit-box-shadow: 0 0.5vmin 1vmin rgba(0, 0, 0, 0.5);
-	        box-shadow: 0 0.5vmin 1vmin rgba(0, 0, 0, 0.5);
+	box-shadow: 0 0.5vmin 1vmin rgba(0, 0, 0, 0.5);
 }
 #host{
 	top: calc(30vh - 8vmin);
 	-webkit-transform: translate3d(-100vw, 0, 0);
 	        transform: translate3d(-100vw, 0, 0);
-	-webkit-transition: -webkit-transform .5s ease-out, -webkit-box-shadow .2s;
-	transition: -webkit-transform .5s ease-out, -webkit-box-shadow .2s;
+	transition: box-shadow .2s, -webkit-transform .5s ease-out;
 	transition: transform .5s ease-out, box-shadow .2s;
-	transition: transform .5s ease-out, box-shadow .2s, -webkit-transform .5s ease-out, -webkit-box-shadow .2s;
+	transition: transform .5s ease-out, box-shadow .2s, -webkit-transform .5s ease-out;
 /* 	-webkit-transform-style: preserve-3d; */
 /* 	animation: slideleft 1s -0.5s ease-out forwards; */
 }
@@ -192,10 +205,9 @@ input{
 	top: calc(70vh - 8vmin);
 	-webkit-transform: translate3d(-100vw, 0, 0);
 	        transform: translate3d(-100vw, 0, 0);
-	-webkit-transition: -webkit-transform .5s ease-out, -webkit-box-shadow .2s;
-	transition: -webkit-transform .5s ease-out, -webkit-box-shadow .2s;
+	transition: box-shadow .2s, -webkit-transform .5s ease-out;
 	transition: transform .5s ease-out, box-shadow .2s;
-	transition: transform .5s ease-out, box-shadow .2s, -webkit-transform .5s ease-out, -webkit-box-shadow .2s;
+	transition: transform .5s ease-out, box-shadow .2s, -webkit-transform .5s ease-out;
 /* 	-webkit-transform-style: preserve-3d; */
 /* 	animation: slideleft 1s ease-out forwards; */
 }
@@ -241,17 +253,14 @@ input{
 	cursor: pointer;
 	font-size: 10vmin;
 	padding: 2vmin;
-	-webkit-transition: -webkit-box-shadow .2s, -webkit-transform .2s;
-	transition: -webkit-box-shadow .2s, -webkit-transform .2s;
+	transition: box-shadow .2s, -webkit-transform .2s;
 	transition: box-shadow .2s, transform .2s;
-	transition: box-shadow .2s, transform .2s, -webkit-box-shadow .2s, -webkit-transform .2s;
-	-webkit-box-shadow: 0 2vmin 3vmin rgba(0, 0, 0, 0.5);
-	        box-shadow: 0 2vmin 3vmin rgba(0, 0, 0, 0.5);
+	transition: box-shadow .2s, transform .2s, -webkit-transform .2s;
+	box-shadow: 0 2vmin 3vmin rgba(0, 0, 0, 0.5);
 	z-index: 100000;
 }
 #startgame:hover{
-	-webkit-box-shadow: 0 0.5vmin 1vmin rgba(0, 0, 0, 0.5);
-	        box-shadow: 0 0.5vmin 1vmin rgba(0, 0, 0, 0.5);
+	box-shadow: 0 0.5vmin 1vmin rgba(0, 0, 0, 0.5);
 	-webkit-transform: scale(0.9);
 	        transform: scale(0.9);
 }
@@ -292,3 +301,12 @@ input{
 	top: 3vmin;
 	left: 3vmin;
 }
+#divider{
+	height: 100vh;
+	width: 4px;
+	position: absolute;
+	top: 0;
+	left: calc(50vw - 2px);
+	background-color: white;
+}
+    
