--- a/editor/style.css
+++ b/editor/style.css
@@ -54,7 +54,7 @@
 	position: relative;
 	padding: 5vmin;
 	box-sizing: border-box;
-	font-size 2vmin;
+	font-size: 2.3vmin;
 	line-height: 1.5;
 	display: inline-block;
 }
