--- a/style.css
+++ b/style.css
@@ -404,4 +404,6 @@ input{
 	position: absolute;
 	bottom: 0;
 	left: 0;
+	-webkit-transform: translate3d(-100vw, 0, 0);
+	        transform: translate3d(-100vw, 0, 0);
 }
