--- a/style.css
+++ b/style.css
@@ -406,4 +406,7 @@ input{
 	left: 0;
 	-webkit-transform: translate3d(-100vw, 0, 0);
 	        transform: translate3d(-100vw, 0, 0);
+	transition: -webkit-transform .5s ease-in-out;
+	transition: transform .5s ease-in-out;
+	transition: transform .5s ease-in-out, -webkit-transform .5s ease-in-out;
 }
